Fixes touch on iOS, again...

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -5,8 +5,5 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    cursor: pointer;
     user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
 }
